# test_franka_control

./: README.md
config/: test_controller.yaml
franka_controllers/: CMakeLists.txt  franka_controllers_plugin.xml  package.xml
franka_controllers/cfg/: force_controller_params.cfg  hybrid_param.cfg  impedance_param.cfg
franka_controllers/config/: franka_controllers.yaml
franka_controllers/include/franka_controllers/: cartesian_velocity_controller.h  force_controller.h  force_controller_v2.h  freq_controller.h  hybrid_controller.h  hybrid_force_controller.h  impedance_force_controller.h  joint_controller_torque_input.h  joint_position_controller.h  joint_velocity_controller.h  state_controller.h  test_controller.h
franka_controllers/launch/: cartesian_velocity_controller.launch  force_controller.launch  ft_force_controller.launch  hybrid_controller.launch  hybrid_force_controller.launch  impedance_force_controller.launch  joint_controller_torque_input.launch  joint_position_controller.launch  joint_velocity_controller.launch  state_controller.launch  test_controller.launch
franka_controllers/msg/: Float64Array.msg  JointTorque.msg  RobotState.msg
franka_controllers/script/: interactive_marker.py  read.py  test_joint_position_controller.py  test_subscriber.py  write_ft_data.py  write_robot_state.py
franka_controllers/src/: cartesian_velocity_controller.cpp  force_controller.cpp  hybrid_controller.cpp  hybrid_force_controller.cpp  impedance_force_controller.cpp  joint_controller_torque_input.cpp  joint_position_controller.cpp  joint_velocity_controller.cpp  pseudo_inversion.h  state_controller.cpp  test_controller.cpp
launch/: joint_position_controller.launch  planning_context.launch
media/data/: f_data_1.txt  f_data_2.txt  f_data_slide.txt  f_data_slide_2.txt  ft_data.txt  read_file.py  ss_data_1.txt  ss_data_2.txt  ss_data_slide-2.txt  ss_data_slide.txt
moveit_python/launch/: context.launch  test_trajectory_controller.launch
moveit_python/scripts/: controller.py  test_planner.py  test_trajectory_controller2.py
netft/: README.md
netft/netft_control/: CMakeLists.txt  package.xml  setup.py
netft/netft_control/include/netft_control/: netft_rdt_driver.h
netft/netft_control/launch/: netft_ros_driver.launch  ros_controllers.launch
netft/netft_control/scripts/: fake_diagnostics.py
netft/netft_control/src/: netft_node.cpp  netft_rdt_driver.cpp  netft_ros_driver.cpp
netft/netft_control/src/netft_control/: controller.py
netft/netft_description/: CMakeLists.txt  package.xml
netft/netft_description/urdf/: ati_gamma.xacro
scripts/: test_joint_controller.py  test_trajectory_controller.py
